# StreetWorks-SDK

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml  publish.yml  regenerate-dtro-models.yml  regenerate-models.yml
docs/: DTRO_SCHEMAS.md  INTEGRATION.md  RELEASING.md  gazetteer-field-dump.md  inspire-gml-investigation.md
examples/: datavia_queries.py  datex2_ndw_roadworks.py  dtro_consume.py  opendata_fastapi.py  openusrn_lookup.py  quickstart.py  srwr_opendata.py  streetmanager_active_section58.py  streetmanager_async_bulk.py  streetmanager_quickstart.py
examples/crime_context/: README.md  generate_map.py
examples/crime_context_lsoa/: README.md  __init__.py  ingest.py  ons.py  report.py  stats.py  worksite.py
scripts/: generate_dtro_models.py  generate_models.py  smoke_test.py
src/streetworks/: __init__.py  _dt.py  _oauth.py  _transport.py  exceptions.py  registry.py
tests/: test_arcgis_client.py  test_arcgis_jersey.py  test_arcgis_tigerweb.py  test_autobahn.py  test_bag.py  test_ban.py  test_bdtopo.py  test_bisonfute.py  test_common.py  test_common_autobahn.py  test_common_bag.py  test_common_ban.py  test_common_bdtopo.py  test_common_datavia.py  test_common_datex2.py  test_common_gazetteer.py  test_common_jersey.py  test_common_kartverket.py  test_common_nvdb.py  test_common_nwb.py  test_common_ogc_features.py  test_common_openusrn.py  test_common_rss.py  test_common_srwr.py  test_common_streetmanager.py  test_common_tigerweb.py  test_common_wzdx.py  test_datavia.py  test_datavia_wms.py  test_datex2.py  test_dgt.py  test_digitraffic.py  test_dtro.py  test_dtro_models.py  test_dtro_models_v4_0_0.py  test_examples_crime_context.py  test_examples_crime_context_lsoa.py  test_irca.py  test_kartverket.py  test_model_generation.py  (+19 more)
tests/fixtures/: autobahn_a12_roadworks.json  autobahn_a1_roadworks.json  autobahn_a61_roadworks.json  autobahn_roads.json  bag_atom_feed.xml  bag_free_response.json  bag_lookup_response.json  bag_reverse_response.json  bag_search_diacritics.json  bag_suggest_response.json  ban_bulk_csv_bal_sample.csv  ban_bulk_csv_sample.csv  ban_reverse.json  ban_search_cross_check.json  ban_search_housenumbers.json  ban_search_street.json  bdtopo_wfs_troncons.json  bdtopo_wfs_voie_nommee.json  bisonfute_content.xml  datavia_esustreets_durham.json  datavia_streetlines_bilingual_synthetic.json  dgt_situations.xml  (+40 more)
(+123 files in other folders)
