[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streetworks"
version = "0.4.0"
description = "An open SDK for UK street works APIs: DfT Street Manager, Street Manager Open Data (SNS), and Geoplace DataVIA."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Kevin Ferguson" }]
keywords = [
  "street manager", "street works", "roadworks", "datavia", "geoplace",
  "nsg", "usrn", "dft", "highways", "permits",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
]

[project.optional-dependencies]
sns = ["cryptography>=42"]
gen = ["datamodel-code-generator>=0.25"]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.5",
  "mypy>=1.10",
  "cryptography>=42",
  "datamodel-code-generator>=0.25",
]

[project.urls]
Homepage = "https://github.com/KFergusonUK/StreetWorks-SDK"
Documentation = "https://github.com/KFergusonUK/StreetWorks-SDK#readme"
Issues = "https://github.com/KFergusonUK/StreetWorks-SDK/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/streetworks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Integration tests hit live systems and need credentials; exclude them from
# the default run. Run them explicitly with: pytest -m integration
addopts = "-m 'not integration'"
markers = [
    "integration: makes real calls to live test/sandbox systems (needs credentials)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
# Generated model files are machine-authored (datamodel-code-generator) and are
# not hand-maintained, so linting them is noise.
# E.g. sometimes the lines are too long in auto generated files
extend-exclude = [
    "src/streetworks/streetmanager/models",
    "src/streetworks/dtro/models",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
